--- a/Makefile.in
+++ b/Makefile.in
@@ -916,7 +916,6 @@ CCASFLAGS = @CCASFLAGS@ $(DEFS)
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@ $(CFLAGS_EXTRA)
 CFLAGS_EXTRA = @CFLAGS_EXTRA@
-CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CSCOPE = @CSCOPE@
 CTAGS = @CTAGS@
@@ -939,6 +938,7 @@ ETAGS = @ETAGS@
 EXEEXT = @EXEEXT@
 EXTRA_TEST_LIBS = @EXTRA_TEST_LIBS@
 FGREP = @FGREP@
+FILECMD = @FILECMD@
 GC_CFLAGS = @GC_CFLAGS@
 GC_VERSION = @GC_VERSION@
 GREP = @GREP@
